--- a/Bai1.ipynb
+++ b/Bai1.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Bai1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOrXk3XJHoiGioFqQJ5ZQRs",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyMd2wrW8+uaT5kLNX12ZZU9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,26 +29,44 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Thực hành 1"
+      ],
+      "metadata": {
+        "id": "WCHgQabj_P4h"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 2,
+      "source": [
+        "n = 10000000\n",
+        "\n",
+        "X = [(2-0)*k/n for k in range(0, n+1)]\n",
+        "S = 0\n",
+        "\n",
+        "for k in range(1, n + 1):\n",
+        "\n",
+        "  S = S + X[k]**2 * (X[k] - X[k-1])\n",
+        "\n",
+        "print (S)"
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "t0T9IR9m4lvm",
-        "outputId": "c3d92e48-bbae-44e4-e460-3f354508040c"
+        "id": "VhOfkNN8Gk9G",
+        "outputId": "8f4801a0-3437-4327-8e95-7ab88eae4765"
       },
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Hello World\n"
+            "2.666667066666659\n"
           ]
         }
-      ],
-      "source": [
-        "print('Hello World')"
       ]
     }
   ]
