--- a/Chương_1.ipynb
+++ b/Chương_1.ipynb
@@ -6,7 +6,7 @@
       "name": "Chương 1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPuC4cMUntFlaq/MbIjztba",
+      "authorship_tag": "ABX9TyPQksZHllGQMnaLID2uh+a1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,7 +52,7 @@
         "id": "VhOfkNN8Gk9G",
         "outputId": "38e66e83-ca41-4e23-ad4c-768144081c0a"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -89,7 +89,7 @@
         "id": "IpKksw8qE6fo",
         "outputId": "486e4904-65fd-45c3-f06e-f222d65414cb"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -124,7 +124,7 @@
         "id": "E7MIpcJJGKG9",
         "outputId": "dad16e7d-2dd0-4160-f0eb-6bdf3d3455c1"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -147,7 +147,7 @@
         "id": "Qe-o-ixuGxFQ",
         "outputId": "c6fc2e0a-c3c5-4a9f-86ce-dd5219eabbfb"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -170,7 +170,7 @@
         "id": "GlPWzDu_G2vL",
         "outputId": "9dfed538-45ff-4d98-d1ec-31788a69eab6"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -273,7 +273,7 @@
         "id": "WZhALKOuRqgt",
         "outputId": "df40db20-9096-4cbf-d87b-cee614eeb449"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -281,6 +281,44 @@
           "text": [
             "Chắc chắn x+3 dương\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Thực hành 7 "
+      ],
+      "metadata": {
+        "id": "WCl44wJp7hNw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy import Symbol\n",
+        "goc_theta = Symbol(\"theta\")\n",
+        "import sympy\n",
+        "(2*sympy.sin(goc_theta) * sympy.cos(goc_theta)).equals(sympy.sin(2*goc_theta))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Bqsrr5Gb7nLQ",
+        "outputId": "571fae35-5d8f-4bef-a39b-2cd3fe449caa"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
         }
       ]
     },
@@ -310,7 +348,7 @@
         "id": "tFFmA3t1HQgy",
         "outputId": "ac6e1884-cce6-4734-e014-7ea0850e706b"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -501,7 +539,7 @@
       "cell_type": "code",
       "source": [
         "from sympy import Limit, sin, S\n",
-        "Limit(x*sin(x)/x,x,S.Infinity)"
+        "Limit(x*sin(x)/x,S.Infinity)"
       ],
       "metadata": {
         "colab": {
@@ -597,7 +635,7 @@
         "id": "rYwQA-JyLhKw",
         "outputId": "6e290f40-6b23-4cf6-97a4-6059f167fff5"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -645,7 +683,7 @@
         },
         "outputId": "8c3025d3-2ac6-42c1-efb2-1a510a1d8ccd"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -688,9 +726,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "G2sa4umxOdqw",
-        "outputId": "52421c4d-b4d6-4446-b1f0-211614f70873"
+        "outputId": "fc3f1afe-efbe-4c98-abbf-8b9a3105548d"
       },
-      "execution_count": 37,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
