--- a/Chương_1.ipynb
+++ b/Chương_1.ipynb
@@ -6,7 +6,8 @@
       "name": "Chương 1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPQksZHllGQMnaLID2uh+a1",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPHqY2we+WVzj4eKGC5oMru",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -565,15 +566,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# Thực hành 12 "
-      ],
-      "metadata": {
-        "id": "aSiqvhGtdxYI"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "from sympy import Limit, Symbol, S\n",
@@ -601,6 +593,48 @@
           },
           "metadata": {},
           "execution_count": 77
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Thực hành 12 "
+      ],
+      "metadata": {
+        "id": "LR3B9QZBPX6s"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy import Limit, Symbol, S\n",
+        "n = Symbol('n')\n",
+        "p = Symbol('p',positive = True)\n",
+        "r = Symbol('r',positive = True)\n",
+        "t = Symbol('t',positive = True)\n",
+        "Limit(p*(1+r/n)**(n*t),n,S.Infinity).doit()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 39
+        },
+        "id": "vasmK6ULPbDo",
+        "outputId": "59808ffb-5743-4052-8b7a-6d55d7b63ae0"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/latex": "$\\displaystyle p e^{r t}$",
+            "text/plain": [
+              "p*exp(r*t)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
         }
       ]
     },
