--- a/Chương_1.ipynb
+++ b/Chương_1.ipynb
@@ -6,8 +6,7 @@
       "name": "Chương 1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyPHqY2we+WVzj4eKGC5oMru",
+      "authorship_tag": "ABX9TyNMIY7fjeW6Nb48gDhxxCMZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -179,6 +178,74 @@
           "text": [
             "2.83333333333333\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Thực hành 4 "
+      ],
+      "metadata": {
+        "id": "T9amts19SJxR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy import *\n",
+        "x = Symbol('x')\n",
+        "y = Symbol('y')\n",
+        "x + y + x - y"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 39
+        },
+        "id": "3AmPKvIxSNgH",
+        "outputId": "3164b6c4-834e-4fc6-8d6a-2e84d2a51092"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/latex": "$\\displaystyle 2 x$",
+            "text/plain": [
+              "2*x"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "(x + y)**2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 40
+        },
+        "id": "G2N3vca-SeTx",
+        "outputId": "3ce591c8-e4c2-43c8-c72c-8f3622cfb5d3"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/latex": "$\\displaystyle \\left(x + y\\right)^{2}$",
+            "text/plain": [
+              "(x + y)**2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
         }
       ]
     },
