--- a/Chương_1.ipynb
+++ b/Chương_1.ipynb
@@ -6,7 +6,7 @@
       "name": "Chương 1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNMIY7fjeW6Nb48gDhxxCMZ",
+      "authorship_tag": "ABX9TyNUI6p0mczsvVtPDu9pkpXy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -206,7 +206,7 @@
         "id": "3AmPKvIxSNgH",
         "outputId": "3164b6c4-834e-4fc6-8d6a-2e84d2a51092"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -234,7 +234,7 @@
         "id": "G2N3vca-SeTx",
         "outputId": "3ce591c8-e4c2-43c8-c72c-8f3622cfb5d3"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -376,7 +376,7 @@
         "id": "Bqsrr5Gb7nLQ",
         "outputId": "571fae35-5d8f-4bef-a39b-2cd3fe449caa"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -690,7 +690,7 @@
         "id": "vasmK6ULPbDo",
         "outputId": "59808ffb-5743-4052-8b7a-6d55d7b63ae0"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -829,13 +829,50 @@
         "id": "G2sa4umxOdqw",
         "outputId": "fc3f1afe-efbe-4c98-abbf-8b9a3105548d"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "a khác b\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Thực hành nhanh"
+      ],
+      "metadata": {
+        "id": "0QJ_rHpxUDX2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = 1000\n",
+        "x = [2*k/n for k in range(0,n+1)]\n",
+        "s = 0\n",
+        "for k in range(3,5):\n",
+        "  s = s + x[k] ** 2 * (x[k -1])\n",
+        "print(s) "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8JQ3xFDXSwCl",
+        "outputId": "a4605da0-bb2d-47e3-c9eb-7d5d0bcd1b5f"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5.280000000000001e-07\n"
           ]
         }
       ]
