--- a/Chương_1.ipynb
+++ b/Chương_1.ipynb
@@ -6,7 +6,7 @@
       "name": "Chương 1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNUI6p0mczsvVtPDu9pkpXy",
+      "authorship_tag": "ABX9TyPOdwxw5VgW04J/CcVPXqoh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -761,9 +761,17 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Bài tập 1 "
+      ],
+      "metadata": {
+        "id": "MhX5OcKSXsM9"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "#Bài tập 1#\n",
         "a = 3.1\n",
         "b = 3\n",
         "i = -1\n",
@@ -812,9 +820,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Bài tập 2 "
+      ],
+      "metadata": {
+        "id": "tB2PiCmaXwz-"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "#Bài tập 2#\n",
         "a = True\n",
         "b = False \n",
         "if a == b and 1/0 > 0:\n",
@@ -843,7 +859,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Thực hành nhanh"
+        "Bài tập nhanh"
       ],
       "metadata": {
         "id": "0QJ_rHpxUDX2"
