--- a/Chương_7.ipynb
+++ b/Chương_7.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chương 7.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMUsPgkXPpssQo77RQi3CRA",
+      "authorship_tag": "ABX9TyMSG0L1/iisIm9DCoGaiaE0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -502,6 +502,296 @@
           },
           "metadata": {},
           "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy import series \n",
+        "from sympy import Sum \n",
+        "from sympy.series.limitseq import dominant \n",
+        "from sympy.abc import n,k\n",
+        "dominant(n**3+100*n**2+200*n+1, n)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 39
+        },
+        "id": "_LyjEq_xZdJE",
+        "outputId": "770bb5b9-633e-44ae-9314-144fcea9fcc7"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "n**3"
+            ],
+            "text/latex": "$\\displaystyle n^{3}$"
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dominant(2**n + Sum(k, (k,0,n)), n) "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 38
+        },
+        "id": "graD72wUZl5R",
+        "outputId": "a738f1d1-1813-4d43-9072-4abbc0d7f8c1"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2**n"
+            ],
+            "text/latex": "$\\displaystyle 2^{n}$"
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dominant(n**2 + Sum(k, (k,0,n)), n)"
+      ],
+      "metadata": {
+        "id": "4HikUzH0ZsF1"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dominant(2*n**2 + Sum(k, (k,0,n)), n)"
+      ],
+      "metadata": {
+        "id": "vihYM772ZyH2"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dominant(n**3 + Sum(k, (k,0,n)), n) "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 39
+        },
+        "id": "8UWOhBAuZ2U-",
+        "outputId": "9e243927-f22e-4eba-eaeb-a6e4d2e24318"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "n**3"
+            ],
+            "text/latex": "$\\displaystyle n^{3}$"
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dominant(n*3 + Sum(k, (k,0,n)), n)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 67
+        },
+        "id": "YV_TpQmEZ430",
+        "outputId": "2f37073f-662e-4c55-a5db-6e47d03aac97"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Sum(k, (k, 0, n))"
+            ],
+            "text/latex": "$\\displaystyle \\sum_{k=0}^{n} k$"
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dominant(2*n*3 + Sum(k, (k,0,n)), n)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 67
+        },
+        "id": "i-1c4jB6Z8LZ",
+        "outputId": "4862a2c7-3f71-4b24-ce89-dc12c252a233"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Sum(k, (k, 0, n))"
+            ],
+            "text/latex": "$\\displaystyle \\sum_{k=0}^{n} k$"
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dominant(2*n**3 + Sum(k, (k,0,n)), n)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 39
+        },
+        "id": "YPzYDZogaDDA",
+        "outputId": "1eea9c1f-a7a5-4951-ccdf-0b2fa0f5e4a5"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2*n**3"
+            ],
+            "text/latex": "$\\displaystyle 2 n^{3}$"
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Thực hành 9 "
+      ],
+      "metadata": {
+        "id": "cnZwVw90aFDO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy import Sum \n",
+        "from sympy.abc import n, k \n",
+        "S = Sum(k, (k, 0, n))\n",
+        "S"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 67
+        },
+        "id": "fmP1qMW5aH2C",
+        "outputId": "aff0d9a7-32f8-463c-a779-b9e61756500d"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Sum(k, (k, 0, n))"
+            ],
+            "text/latex": "$\\displaystyle \\sum_{k=0}^{n} k$"
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy import Symbol, cos, series \n",
+        "x = Symbol('x') \n",
+        "S1 = series(cos(x), x) \n",
+        "S1 "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "id": "bXobLuO_aPvL",
+        "outputId": "f548f1c0-d71a-4bda-e8b7-c909f9be3625"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1 - x**2/2 + x**4/24 + O(x**6)"
+            ],
+            "text/latex": "$\\displaystyle 1 - \\frac{x^{2}}{2} + \\frac{x^{4}}{24} + O\\left(x^{6}\\right)$"
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy.abc import n \n",
+        "e = (1+1/n)**n \n",
+        "print (round(e.subs(n, 100).evalf(),10))"
+      ],
+      "metadata": {
+        "id": "dfYeUp-kaS4D",
+        "outputId": "6645c733-2dbb-4ed6-a768-fee44d573316",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2.7048138294\n"
+          ]
         }
       ]
     }
