--- a/Chương_8.ipynb
+++ b/Chương_8.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chương 8.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOjZnKAggAvmWpO5R56cZEq",
+      "authorship_tag": "ABX9TyMnFIasXgEK76eeeF5VnZVr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -711,6 +711,111 @@
           },
           "metadata": {},
           "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Thực hành 8 "
+      ],
+      "metadata": {
+        "id": "hDdzUfvgjFuf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy import Derivative, Symbol, solve\n",
+        "x = Symbol('x') \n",
+        "y = Symbol('y') \n",
+        "z = Symbol('z') \n",
+        "f = 4*x*y - 8*x - 5 + z*(x+y-50)\n",
+        "dx = Derivative(f, x).doit() \n",
+        "dy = Derivative(f, y).doit() \n",
+        "dz = Derivative(f, z).doit() "
+      ],
+      "metadata": {
+        "id": "Go_6A9QXjI9H"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nghiem = solve([dx, dy, dz], (x,y,z)) \n",
+        "print (nghiem)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "E76hcieajUop",
+        "outputId": "220afbb9-bc91-4442-d051-5c92db3e661b"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{x: 24, y: 26, z: -96}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "xx = nghiem[x] \n",
+        "yy = nghiem[y] \n",
+        "4*xx*yy - 8*xx - 5"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 38
+        },
+        "id": "d0BY-Ke_jYhq",
+        "outputId": "ea1a3a5c-abb8-4926-c9c6-8c50aed5b5af"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2299"
+            ],
+            "text/latex": "$\\displaystyle 2299$"
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ketqua = 4*nghiem[x]* nghiem[y] - 8* nghiem[x] - 5 \n",
+        "print (ketqua) "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vGnRYz9ijj0o",
+        "outputId": "ddbbf04a-4f9f-44fd-8b11-99fe9a340732"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2299\n"
+          ]
         }
       ]
     }
